--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   },
   "homepage": "https://github.com/packerb2/Introvert_Calander_Startup#readme",
   "devDependencies": {
-    "vite": "^7.1.9"
+    "vite": "^7.2.6"
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "express": "^5.2.1",
     "mongodb": "^7.0.0",
-    "react": "^19.2.0",
+    "react": "^19.2.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.3"
+    "react-dom": "^19.2.1",
+    "react-router-dom": "^7.9.3",
+    "ws": "^8.18.3"
   }
 }
